# portfolio

./: README.md  deal.py  load_ts.py  multi-assets.ipynb  pyproject.toml  risk-return.ipynb  risk_return.py  template.pptx  yfinance.ipynb  たわらノーロード全世界株式.csv  インデックスコレクション（国内債券）.csv  インデックスコレクション（外国債券）.csv  上場インデックスファンド海外先進国株式（ＭＳＣＩ－ＫＯＫＵＳＡＩ）.csv  上場インデックスファンド米国株式（Ｓ＆Ｐ５００）.csv  上場インデックスファンドＴＯＰＩＸ.csv  投資信託協会.ipynb  最適ポートフォリオ計算.ipynb  東京海上セレクション・物価連動国債.csv  ＭＡＸＩＳトピックス上場投信.csv  ＮＥＸＴ　ＦＵＮＤＳ金価格連動型上場投信.csv  ｅＭＡＸＩＳ　Ｓｌｉｍ全世界株式（オール・カントリー）.csv  ｅＭＡＸＩＳ　Ｓｌｉｍ米国株式（Ｓ＆Ｐ５００）.csv  ｅＭＡＸＩＳ全世界株式インデックス.csv  ｅＭＡＸＩＳ新興国リートインデックス.csv  ｉシェアーズゴールドインデックス・ファンド（為替ヘッジなし）.csv
