[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
quandl = "^3.7.0"
pandas = "^2.2.3"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.51"
tiingo = "^0.15.6"
toml = "^0.10.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
simpy = "^4.1.1"
jpholiday = "^0.1.10"
python-pptx = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
